--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^15.4.0",
+    "jwt-decode": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^18.2.0",
