--- a/client/package.json
+++ b/client/package.json
@@ -18,16 +18,17 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.6.2",
     "fullcalendar": "^5.11.3",
     "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^1.0.1",
+    "react-bootstrap": "^1.6.6",
     "react-bootstrap-icons": "^1.10.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-frame-component": "^5.2.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
