--- a/client/package.json
+++ b/client/package.json
@@ -20,16 +20,17 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^4.6.2",
     "fullcalendar": "^5.11.3",
-    "phone-number-formats": "^2.2.1",
     "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
     "moment": "^2.29.4",
+    "phone-number-formats": "^2.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.6",
     "react-bootstrap-icons": "^1.10.2",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-frame-component": "^5.2.3",
+    "react-lottie-player": "^1.5.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
