--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/daygrid": "^5.11.3",
     "@fullcalendar/interaction": "^5.11.3",
     "@fullcalendar/list": "^5.11.3",
+    "@fullcalendar/moment": "^5.11.3",
     "@fullcalendar/react": "^5.11.3",
     "@fullcalendar/timegrid": "^5.11.3",
     "@react-google-maps/api": "^2.7.0",
