--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^5.1.0"
+  },
+  "dependencies": {
+    "moment": "^2.29.4"
   }
 }
